Updated the Redirection Bug

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body onload="redirect()">
   <script>
     function redirect() {
-      window.location = "//www.source4resource.blogspot.com";
+      location.href = "https://source4resource.blogspot.com";
     }
   </script>
 </body>
